--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,21 +20,7 @@ body {
   font-weight: 400;
 }
 
-/*---------------------------------------------------------------------------------------------------*/
-.center-column {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  height: 100%;
-}
-
-.center-row {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-
+/*---------------------------------USE MAIN PLACE-----------------------------------------------*/
 
 .about_right {
   display: flex;
@@ -43,15 +29,13 @@ body {
   height: 100%;
 }
 
-
-
-
-
-.swiper-button-prev, .swiper-button-next {
+.swiper-button-prev,
+.swiper-button-next {
   top: 45%;
 }
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   color: #ffffff !important;
   margin: 5px;
   display: block;
@@ -59,15 +43,18 @@ body {
   user-select: none;
 }
 
-.swiper-button-prev:after, .swiper-button-next:after  {
+.swiper-button-prev:after,
+.swiper-button-next:after {
   font-size: 20px !important;
 }
 
-.swiper-button-next:hover, .swiper-button-prev:hover {
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
   opacity: unset;
 }
 
-.swiper-button-next, .swiper-button-prev {
+.swiper-button-next,
+.swiper-button-prev {
   border-radius: 50%;
   width: 45px !important;
   height: 45px !important;
@@ -79,84 +66,19 @@ body {
   opacity: 0.6;
 }
 
-.swiper-button-next:hover, .swiper-button-prev:hover {
+.swiper-button-next:hover,
+.swiper-button-prev:hover {
   opacity: 1;
 }
-/*---------------------------------------------------------------------------------------------------*/
 
-
-
-/*Import fonts*/
-@font-face {
-  font-family: "myFonts";
-  src: url("../../assets/fonts/Gilroy/Gilroy-Light.otf");
-  src: url("../../assets/fonts/Gilroy/Gilroy-Light.otf") format("truetype");
-  font-weight: 400;
-  font-style: normal;
+.swiper-pagination-bullet-active {
+  background-color: var(--light-mode-color-2) !important;
 }
 
-/*---------------------------------------------------------------------------------------------------*/
-
-
-
-/*Aktiv menu*/
 .nuxt-link-exact-active {
   color: var(--light-mode-color-2) !important;
   font-weight: bold;
 }
-
-/*---------------------------------------------------------------------------------------------------*/
-
-
-/* Light and dark version button */
-.button-theme {
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
-  width: 50px;
-  height: 50px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  perspective: 1000px;
-}
-
-.sun-icon, .moon-icon {
-  width: 100%;
-  height: 100%;
-  transition: transform 0.5s, opacity 0.5s;
-  transform-style: preserve-3d;
-  backface-visibility: hidden;
-}
-
-.sun-icon {
-  fill: #FDB813;
-  transform: rotate(0deg);
-  width: 50px;
-  height: 50px;
-  opacity: 1;
-}
-
-.moon-icon {
-  fill: #E3E4E8;
-  transform: rotate(-180deg);
-  opacity: 0;
-  width: 25px;
-  height: 25px;
-}
-
-.isDarkMode .sun-icon {
-  transform: rotate(180deg);
-  opacity: 0;
-  display: none;
-}
-
-.isDarkMode .moon-icon {
-  transform: rotate(0deg);
-  opacity: 1;
-}
-
-/*-------------------------------------------------------------------------------------------------------------------*/
 
 
 /*Custom scrollBar*/
@@ -179,29 +101,17 @@ input:-webkit-autofill:active {
   transition: background-color 5000s ease-in-out 0s;
 }
 
-/*-------------------------------------------------------------------------------------------------------------------*/
-
-
-/* Main css */
 .leaflet-popup-content-wrapper {
   width: 195px !important;
   text-align: center !important;
 }
 
-dd, dt {
+dd,
+dt {
   color: var(--light-mode-font-color-white);
 }
 
 /*-------------------------------------------------------------------------------------------------------------------*/
-
-.blueimp-gallery>.slides {
-  margin-left: -12px;
-}
-
-.dark_mode {
-  mix-blend-mode: luminosity;
-  opacity: 0.9;
-}
 
 .main_page_body {
   padding: 50px 0;
@@ -211,16 +121,13 @@ dd, dt {
   padding: 80px 0;
 }
 
-
-
-
 .title_info_wrapper {
   display: flex;
+  text-align: center;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  text-align: center;
-  margin-bottom: 30px;
+  margin-bottom: 20px;
 }
 
 .title_info_wrapper h1 {
@@ -240,15 +147,13 @@ dd, dt {
 }
 
 
-
-
 @media only screen and (max-width: 600px) {
   .Vue-Toastification__container .Vue-Toastification__toast {
     margin-bottom: 0;
     text-align: center;
   }
+
+  .page_part {
+    padding: 40px 0;
+  }
 }
-
-
-
-
