--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,6 +29,21 @@ body {
   height: 100%;
 }
 
+.error-text {
+  display: block;
+  font-size: 12px;
+  color: var(--red-font-color);
+  margin-bottom: 20px;
+}
+
+.error-text-2 {
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  color: var(--red-font-color);
+  margin-top: 20px;
+}
+
 .swiper-button-prev,
 .swiper-button-next {
   top: 45%;
@@ -69,6 +84,12 @@ body {
 .swiper-button-next:hover,
 .swiper-button-prev:hover {
   opacity: 1;
+}
+
+.swiper-pagination-bullet {
+  width: 18px !important;
+  height: 18px !important;
+  opacity: 0.3;
 }
 
 .swiper-pagination-bullet-active {
@@ -156,4 +177,13 @@ dt {
   .page_part {
     padding: 40px 0;
   }
+
+  .swiper-button-prev, .swiper-button-next {
+    display: none !important;
+  }
+
+  .slider img {
+    height: 250px !important;
+  }
+
 }
