--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,7 +40,7 @@ body {
   display: block;
   font-size: 14px;
   font-weight: 500;
-  color: var(--red-font-color);
+  color: #ffc221;
   margin-top: 20px;
 }
 
@@ -165,34 +165,6 @@ dt {
 
 .title_info_wrapper p {
   color: #444444;
-}
-
-
-.buta_animation_wrapper {
-  position: absolute;
-  z-index: -1;
-  top: 50px;
-  left: 50%;
-  left: calc(50% - 75px);
-  width: 150px;
-  height: 150px;
-  animation: round 30s infinite;
-}
-
-.buta_animation_wrapper img {
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-}
-
-@keyframes round {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
 }
 
 @media only screen and (max-width: 600px) {
